removed broken infinite scroll, fixed zoom

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -68,36 +68,40 @@ br{
 .container{
 	width:70%;
 	margin-top: 40px;
+	margin-bottom: 40px;
 }
+
+
 
 #dress-attibutes{
 
+	&>span{
+		float: left;
+		width: 240px;
+		margin-right: 40px;
+	}
+	img.dress-image{
+		width: 240px;
+		// clear:both;
+	}
+
 	.info{
-		padding-left: 40px;
+		clear:both;
 		display:inline-block;
-	}
 
-	.dress-image-wrapper{
-
-	}
-
-	img{
-		height:350px;
-		float:left;
-	}
-
-	img.logo{
+		img.logo{
 		height:20px;
 		margin-bottom: 10px;
-		opacity:0.4;
-		filter:alpha(opacity=40); /* For IE8 and earlier */
+		opacity:0.5;
+		filter:alpha(opacity=50); /* For IE8 and earlier */
+		}
 	}
+	
+
+	
 }
 
 #dresses{
-
-
-	
 	#filter_panel{
 		width: 100%;
 		height: 50px;
